--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@ div {text-align: center;}
 
 <div class="login">
 <h2 >K Means Cluster Analysis to predict Customer is target or not .</h2>
-<h4>Developed by Sushil Kumar</h4>
+<h4>Developed by Nakul Singh Jadon</h4>
 <!-- Main Input For Receiving Query to our ML -->
 <form action="{{ url_for('predict')}}"method="get">
 
